@@ -1,32 +1,32 @@
 <?php  /* Translated by Josep Llaó i Sergi Tur */
 	$lang['list_add']				= 'Afegir';
 	$lang['list_actions']			= 'Accions';
-	$lang['list_page']				= 'Pàgina';  
+	$lang['list_page']				= 'Pàgina';
 	$lang['list_paging_of']			= 'de';
 	$lang['list_displaying']		= 'Mostrant {start} a {end} de {results} registres';
 	$lang['list_filtered_from']		= '(filtrats de {total_results} entrades totals)';
 	$lang['list_show_entries']		= 'Mostrar {paging} entradas';
 	$lang['list_no_items']			= 'No hi ha registres per mostrar';
 	$lang['list_zero_entries']		= 'Mostrant 0 a 0 de 0 registres';
-	$lang['list_search']			= 'Cercar';    
+	$lang['list_search']			= 'Cercar';
 	$lang['list_search_all']		= 'Cercar tots';
 	$lang['list_clear_filtering']   = 'Netejar filtrats';
 	$lang['list_delete']			= 'Esborrar';
-	$lang['list_edit']				= 'Editar';  
-	$lang['list_view']				= 'Veure';  
+	$lang['list_edit']				= 'Editar';
+	$lang['list_view']				= 'Veure';
 	$lang['list_paging_first']		= 'Primer';
 	$lang['list_paging_previous']	= 'Anterior';
 	$lang['list_paging_next']		= 'Següent';
 	$lang['list_paging_last']		= 'Últim';
-	$lang['list_loading']			= 'Carregant...';          
+	$lang['list_loading']			= 'Carregant...';
 
 	$lang['form_edit']				= 'Editar';
 	$lang['form_view']				= 'Veure';
 	$lang['form_back_to_list']		= 'Tornar a la llista';
 	$lang['form_update_changes']	= 'Actualitzar canvis';
-	$lang['form_cancel']			= 'Cancel·lar';  
+	$lang['form_cancel']			= 'Cancel·lar';
 	$lang['form_update_loading']	= 'Carregant, actualitzant canvis...';
-	$lang['update_success_message']	= 'Els canvis han estat aplicats correctament.';                
+	$lang['update_success_message']	= 'Els canvis han estat aplicats correctament.';
 	$lang['form_go_back_to_list']	= 'Tornar a la llista';
 
 	$lang['form_add']				= 'Agregar';
@@ -37,7 +37,7 @@
 
 	$lang['form_upload_a_file']		= 'Pujar un arxiu';
 	$lang['form_upload_delete']		= 'esborrar';
-	$lang['form_button_clear']		= 'Netejar';  
+	$lang['form_button_clear']		= 'Netejar';
 
 	$lang['delete_success_message']	= 'Les dades han estat esborrades correctament de la base de dades.';
 	$lang['delete_error_message']	= 'Les dades NO han pogut ser esborrades de la base de dades.';
@@ -49,13 +49,13 @@
 
 	$lang['insert_error']			= 'Error durant la inserció.';
 	$lang['update_error']			= 'Error al guardar.';
-	
+
 	/* Added in version 1.2.1 */
-	$lang['set_relation_title']		= 'Select {field_display_as}';	
+	$lang['set_relation_title']		= 'Select {field_display_as}';
 	$lang['list_record']			= 'Registe';
 	$lang['form_inactive']			= 'Inactiu';
 	$lang['form_active']			= 'Actiu';
-	
+
 	/* Added in version 1.2.2 */
 	$lang['form_save_and_go_back']	= 'Guardar i tornar a la llista';
 	$lang['form_update_and_go_back']= 'Actualitzar i tornar a la llista';
@@ -66,7 +66,7 @@
 	$lang['string_progress'] 		= "Progrés: ";
 	$lang['error_on_uploading'] 	= "Error de pujada";
 	$lang['message_prompt_delete_file'] 	= "Esteu segur que desitjeu esborrar l'arxiu?";
-	
+
 	$lang['error_max_number_of_files'] 	= "Solament pot pujar un arxiu alhora.";
 	$lang['error_accept_file_types'] 	= "No està permès pujar arxius amb aquesta extensió.";
 	$lang['error_max_file_size'] 		= "El arxiu pujat excedeix la mida màxima permesa: {max_file_size}.";
@@ -76,7 +76,3 @@
 	$lang['list_export'] 	= "Exportar";
 	$lang['list_print'] 	= "Imprimir";
 	$lang['minimize_maximize'] = 'Minimitzar / Maximitzar';
-	
-	
-	
-	
